--- a/angular.json
+++ b/angular.json
@@ -24,11 +24,7 @@
                 "input": "public"
               }
             ],
-            "styles": [
-              "src/styles.css",
-              "node_modules/ngx-toastr/toastr.css",
-              "/src/styles/content-shared.css"
-            ],
+            "styles": ["src/styles.css", "node_modules/ngx-toastr/toastr.css"],
             "scripts": []
           },
           "configurations": {
