--- a/pom.xml
+++ b/pom.xml
@@ -73,7 +73,10 @@
 			<groupId>com.auth0</groupId>
 			<artifactId>java-jwt</artifactId>
 			<version>4.4.0</version>
-		</dependency>
+		</dependency><dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-validation</artifactId>
+	</dependency>
 	</dependencies>
 
 	<build>
