--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ api.security.token.secret=my-secret-key-from-video
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+spring.jpa.hibernate.ddl-auto=update
