--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^19.0.0",
     "@ng-icons/core": "^31.3.0",
     "@ng-icons/mynaui": "^31.3.0",
+    "@ng-icons/tdesign-icons": "^31.4.0",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
