--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,3 @@
 spring.application.name=spring3.4.5-java-21
-
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-
+spring.profiles.active=mysql
 api.security.token.secret=my-secret-key-from-video
-
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-
-spring.jpa.hibernate.ddl-auto=update
