--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # Serviço do Banco de Dados MySQL
   db:
@@ -7,7 +5,7 @@ services:
     container_name: finance-system-db
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: ${DB_ROOT_PASSWORD} # Será lido do seu arquivo .env
+      MYSQL_ROOT_PASSWORD: ${DB_ROOT_PASSWORD}
       MYSQL_DATABASE: finance_bank
       MYSQL_USER: ${DB_USER}
       MYSQL_PASSWORD: ${DB_PASSWORD}
@@ -18,7 +16,7 @@ services:
 
   # Serviço do Backend (Java)
   backend:
-    build: ./back-end/jwt-login-and-register # <-- Caminho corrigido para o build
+    build: ./back-end
     container_name: finance-system-api
     restart: always
     depends_on:
@@ -33,7 +31,7 @@ services:
 
   # Serviço do Frontend (Angular)
   frontend:
-    build: ./front-end/angular-login-and-register # <-- Caminho corrigido para o build
+    build: ./front-end
     container_name: finance-system-ui
     restart: always
     ports:
